# lidr-models

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/verify-evidence/: SKILL.md
.claude/skills/verify-evidence/scripts/: verify_evidence_template.py
.github/workflows/: test.yml
artifacts/: results_log.csv
configs/: baseline.yaml  baseline_six_signals.yaml  baseline_six_signals_lightgbm.yaml  baseline_six_signals_unweighted.yaml  dev_synthetic.yaml
docs/: README.md  changelog.md  roadmap.md  signals.md
docs/_pr_evidence/bollinger/: evidence.md
docs/_pr_evidence/breakout/: evidence.md
docs/_pr_evidence/classweight_sanity_check/: evidence.md
docs/_pr_evidence/horizon_sweep/: evidence.md
docs/_pr_evidence/lightgbm/: diagnostics.md  evidence.md
docs/_pr_evidence/macd/: evidence.md
docs/_pr_evidence/pr_b_verification/: llm_spend_sample.csv  verify_log.txt  verify_pr_b_live.py
docs/_pr_evidence/rsi/: evidence.md
docs/_pr_evidence/six_signal_baseline/: evidence.md
docs/_pr_evidence/volume/: evidence.md
docs/adr/: 0001-multi-model-repo-architecture.md
docs/plans/: horizon-spike.md  pr-c-news-v0-backtest.md  task-1-repo-restructure.md  task-2-news-sentiment-model.md
docs/reports/: README.md
docs/research/: data-sources.md
docs/sample-report/: report.html
pytest-cache-files-o4434ewm/v/cache/: nodeids
scripts/: diagnose_lightgbm.py  verify_bollinger.py  verify_breakout.py  verify_classweight_sanity_check.py  verify_horizon_sweep.py  verify_lightgbm.py  verify_macd.py  verify_rsi.py  verify_six_signal_baseline.py  verify_volume.py
src/lidr_ml/: __init__.py  __main__.py  cli.py  pipeline.py
src/lidr_ml/backtest/: engine.py
src/lidr_ml/data/: loaders.py
src/lidr_ml/eval/: metrics.py  report.py  results_log.py
src/lidr_ml/models/: __init__.py  lightgbm.py  logistic.py
src/lidr_ml/signals/: __init__.py  base.py  bollinger.py  breakout.py  macd.py  registry.py  rsi.py  sma_crossover.py  volume.py
tests/: conftest.py  test_backtest_engine.py  test_no_lookahead.py  test_pipeline_smoke.py  test_signal_accuracy.py  test_strategy_returns.py
