[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidr-ml"
version = "0.1.0"
description = "ML pipeline for backtested BUY/HOLD/SELL recommendations from lidr signals."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Boon Boonyasirichok" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "yfinance>=0.2.40",
    "pyyaml>=6.0",
    "typer>=0.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
lidr-ml = "lidr_ml.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
