# Root meta-project for the lidr-models monorepo.
#
# Per-package metadata lives in packages/<name>/pyproject.toml. This file is
# kept minimal — it carries only the shared lint/test config and a `make
# install` target that pip-installs every package editable. There is no
# top-level Python package at the repo root.

[project]
name = "lidr-models"
version = "0.1.0"
description = "Research monorepo: shared backtest/eval harness (lidr_core) + competing models (ta_ensemble, news_sentiment) that emit a shared JSON artifact for the lidr front-end."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Boon Boonyasirichok" }]
license = { text = "PolyForm-Noncommercial-1.0.0" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "packages/*/build",
    "packages/*/dist",
    "packages/*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # handled by formatter

[tool.pytest.ini_options]
testpaths = [
    "packages/lidr_core/tests",
    "packages/ta_ensemble/tests",
    "packages/news_sentiment/tests",
]
addopts = "-q"
